// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Cuevana does not return es content for mx 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://streamwish.to/e/9icce2ca0yir",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://filemoon.sx/e/fgxxkidqq4jp",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://voe.sx/e/h87m8wyj5x8j",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://doodstream.com/e/ju53ufkqy9hc",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://streamtape.com/e/WgxgBAwOyGfbZxY",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://waaw.to/f/xtG7M9GL2MmV",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://filelions.to/v/tnehp8g7zght",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://plustream.com/embedb2/gHHRwqKdHgF5MYniuxGWnG8j_vIW77uC4a4vrO5iwLktMwS8ryr2i.bhH3SiGHw6PKNBoqxCHLDyc1Pw6EPhwg--",
  },
]
`;

exports[`Cuevana does not return mx content for es 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://streamwish.to/e/mtb09rms1njz",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://filemoon.sx/e/r77fu9ez9nsv",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://voe.sx/e/cepsnqy0qgyo",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://doodstream.com/e/ny5qlz61x9xt",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://waaw.to/f/hlHhgFkmWHom",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://plustream.com/embedb2/DpAUEfJrAHkBAdb.6erU25OAypGXqMugDfQuWU2sTDBKHNQmIxzyq1b2Ma06kb7EgL6d4hdzw8quWDimAGnIvQ--",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://vidhidepro.com/v/lhaueh479t2v",
  },
]
`;

exports[`Cuevana handle el camino 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://streamwish.to/e/9icce2ca0yir",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://filemoon.sx/e/fgxxkidqq4jp",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://voe.sx/e/h87m8wyj5x8j",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://doodstream.com/e/ju53ufkqy9hc",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://streamtape.com/e/WgxgBAwOyGfbZxY",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://waaw.to/f/xtG7M9GL2MmV",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://filelions.to/v/tnehp8g7zght",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://plustream.com/embedb2/gHHRwqKdHgF5MYniuxGWnG8j_vIW77uC4a4vrO5iwLktMwS8ryr2i.bhH3SiGHw6PKNBoqxCHLDyc1Pw6EPhwg--",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://streamwish.to/e/mtb09rms1njz",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://filemoon.sx/e/r77fu9ez9nsv",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://voe.sx/e/cepsnqy0qgyo",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://doodstream.com/e/ny5qlz61x9xt",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://waaw.to/f/hlHhgFkmWHom",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://plustream.com/embedb2/DpAUEfJrAHkBAdb.6erU25OAypGXqMugDfQuWU2sTDBKHNQmIxzyq1b2Ma06kb7EgL6d4hdzw8quWDimAGnIvQ--",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "El Camino: Una película de Breaking Bad",
    },
    "url": "https://vidhidepro.com/v/lhaueh479t2v",
  },
]
`;

exports[`Cuevana handle la frontera s1e1 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "La frontera 1x1",
    },
    "url": "https://streamwish.to/e/tpzbrzz7p41k",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "La frontera 1x1",
    },
    "url": "https://filemoon.sx/e/nhbmj6o6zl0l",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "La frontera 1x1",
    },
    "url": "https://vidhidepro.com/v/x5w6b0wys1fs",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "La frontera 1x1",
    },
    "url": "https://voe.sx/e/nfal9zqu9yvy",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "La frontera 1x1",
    },
    "url": "https://doodstream.com/e/dyvg7ofnnqgi",
  },
  {
    "meta": {
      "countryCodes": [
        "es",
      ],
      "title": "La frontera 1x1",
    },
    "url": "https://waaw.to/f/goypdL0qGqks",
  },
]
`;

exports[`Cuevana handle walking dead s1e1 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "The Walking Dead 1x1",
    },
    "url": "https://streamwish.to/e/gudk6hvc4qwl",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "The Walking Dead 1x1",
    },
    "url": "https://filemoon.sx/e/kp39yor1z0js",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "The Walking Dead 1x1",
    },
    "url": "https://voe.sx/e/4ahrkbnofnty",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "The Walking Dead 1x1",
    },
    "url": "https://doodstream.com/e/wvk23p39ikyd",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "The Walking Dead 1x1",
    },
    "url": "https://streamtape.com/e/qMjrKleBMpCLO0",
  },
  {
    "meta": {
      "countryCodes": [
        "mx",
      ],
      "title": "The Walking Dead 1x1",
    },
    "url": "https://filelions.to/v/rvyogjvsejlh",
  },
]
`;
